@@ -1,4 +1,11 @@
 2014-09-05  James Pallister  <james.pallister@embecosm.com>
+	Added more instructions to the AVR port: dec, sbc, clr, ser, cpc
+
+	* superopt.c (output_assembly): Added assembly output for the above
+	instrucitons.
+	* synth.def: Synth the above instructions.
+
+2014-09-05  James Pallister  <james.pallister@embecosm.com>
 	Added the compare with carry instruction definition (cmpc), and updated
 	cmp to work with other bit widths.
 
